# cmakeTest

./: .gitignore  CMakeLists.txt  GitVersion.cmake
include/: Version.h.in
src/: Version.cpp  main.cpp
